<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="ask_helpers">Написать в поддержку</string>
    <string name="the_docs">Пользовательское соглашение</string>
    <string name="media_text" >Это медиатека!</string>
    <string name="search_hint">Поиск</string>
    <string name="course_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="my_mail">lyesochka@yandex.ru</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="exeption_support_mail">Не смогли открыть приложение. Напишите lyesochka@yandex.ru</string>
    <string name="refresh_but">Обновить</string>
    <string name="history_heading">Вы искали</string>
    <string name="clear_history_but">Очистить историю</string>
    <string name="player_country">Страна</string>
    <string name="player_genre">Жанр</string>
    <string name="player_year">Год</string>
    <string name="player_album">Альбом</string>
    <string name="player_duration">Длительность</string>
    <string name="zero_current_timing">00:00</string>
    <string name="nothing_found_text">Ничего не нашлось</string>
    <string name="server_connection_error_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="terms_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="empty_favourites">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist_name_edittext">Название*</string>
    <string name="new_playlist_description_edittext">Описание</string>
    <string name="create_button">Создать</string>
    <string name="cancel_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="cancel_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="end">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_description">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="share">Поделиться</string>
    <string name="change_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="redact">Редактировать</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    ?>
</resources>