<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            app:tint="@color/nice_black"
            android:layout_marginRight="28dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/nice_black"
            android:textSize="@dimen/text_size_main" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigth_61"
        android:layout_marginTop="24dp"
        android:paddingStart="@dimen/padding_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <Switch
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center|end"
            android:thumbTint="@color/gray"
            android:trackTint="@color/light_gray"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigth_61"
        android:paddingStart="@dimen/padding_16">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"/>

        <ImageView
        android:layout_width="@dimen/padding_16"
        android:layout_height="18dp"
        android:src="@drawable/share_icon"
        app:tint="@color/gray"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/padding_16"
        android:layout_marginTop="22dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigth_61"
        android:paddingStart="@dimen/padding_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/ask_helpers"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:src="@drawable/helper_icon"
            app:tint="@color/gray"
            android:layout_gravity="end"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="22.1dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigth_61"
        android:paddingStart="@dimen/padding_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/the_docs"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"/>

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/arrow_forward"
            app:tint="@color/gray" />

    </FrameLayout>

</LinearLayout>